--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,44 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body{
+    background-image: linear-gradient(to right,#43C6AC,#191654);
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.active{
+    color:#43C6AC !important;
+}
+.left_color{
+    background-color: #43C6AC;
+    color: #FFF;
+}
+.left_color:hover{
+    background-color: rgb(67, 198, 172,.75);
+    color: #000;
+}
+.right_color{
+    background-color: #191654;
+}
+.modal form{
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.modal-dialog{
+    width: 50%;
+}
+.h-80{
+    height: 80%;
+}
+.btn{
+    border: none !important;
+}
+.modal-body h3{
+    color: #940000;
+}
+#AllNotes{
+    display: none;
+}
+#allFavorite{
+    display: none;
+}
+.h-92{
+    height: 92vh;
 }
