--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@ body{
     width: 50%;
 }
 .h-80{
-    height: 80%;
+    height: 90%;
 }
 .btn{
     border: none !important;
@@ -41,4 +41,7 @@ body{
 }
 .h-92{
     height: 92vh;
+}
+.z-10{
+    z-index: 10;
 }
